--- a/js_learning/loan_calculator.html
+++ b/js_learning/loan_calculator.html
@@ -50,7 +50,7 @@
     <tr>
         <th>Approximate Payments:</th>
         <td>
-            <button onchange="calculate()">Calculate</button>
+            <button onclick="calculate()">Calculate</button>
         </td>
     </tr>
     <tr>
@@ -75,7 +75,7 @@
 </table>
 <script>
     "use strict";//如果浏览器支持则开启ECMAScript 5的严格模式
-    function caculate() {
+    function calculate() {
         var amount = document.getElementById("amount");
         var apr = document.getElementById("apr");
         var years = document.getElementById("years");
@@ -141,11 +141,103 @@
     function getLenders(amount, apr, years, zipcode) {
         if (!window.XMLHttpRequest) return;
         var ad = document.getElementById("lenders");
-        if(!ad) return;
+        if (!ad) return;
         var url = "";//url编码，需要根据服务器的接口api来拼接
         var req = new XMLHttpRequest();
         req.open("GET", url);
-        //TODO
+        //异步回调
+        req.onreadystatechange = function () {
+            if (req.readyState == 4 && req.status200) {
+                var response = req.responseText;
+                req.send(null);
+                var lenders = JSON.parse(response);//解析为数组
+                //将数组转换为HTML字符串形式
+                var list = "";
+                for (var i = 0; i < lenders.length; i++) {
+                    list += "<li><a href='" + lenders[i].url + "'>" + lenders[i].name + "</a></li>";
+                }
+                ad.innerHTML = "<ul>" + list + "</ul>";
+            }
+        }
+    }
+
+    //在<canvas>元素中用图表表示月度贷款余额/利息/资产收益
+    function chart(principal, interest, monthly, payments) {
+        var graph = document.getElementById("graph");
+        graph.width = graph.width; //巧妙的清除并重置画质
+        //不传入参数或浏览器不支持则返回
+        if (arguments.length == 0 || !graph.getContext) return;
+        //画布元素的"context"对象,这个对象定义了一组绘画API
+        var g = graph.getContext("2d");
+        var width = graph.width;
+        var height = graph.height;
+
+        //将付款数字和美元数据转换为像素
+        function paymentToX(n) {
+            return n * width / payments;
+        }
+
+        function amountToY(a) {
+            return height - (a * height / (monthly * payments * 1.05));
+        }
+
+        //付款数据是从(0,0)到(payments,monthly*payments)的直线
+        g.moveTo(paymentToX(0), amountToY(0));
+        g.lineTo(paymentToX(payments), amountToY(monthly * payments));
+        g.lineTo(paymentToX(payments), amountToY(0))
+        g.closePath();//将结尾连接到开头
+        g.fillStyle = "#f88";//亮红色
+        g.fill();//填充矩形
+        g.font = "bold 12px sans-serif";//定义字体
+        g.fillText("Total Interest Payments", 20, 20);
+
+        var equity = 0;
+        g.beginPath();//开始绘制新图形
+        for (var p = 1; p < payments; p++) {
+            //计算每一笔赔付利息
+            var thisMonthsInterest = (principal - equity) * interest;
+            equity += (monthly - thisMonthsInterest);
+            g.lineTo(paymentToX(p), amountToY(equity));
+        }
+        g.lineTo(paymentToX(payments), amountToY(0));
+        g.closePath();
+        g.fillStyle = "green";
+        g.fill();//曲线下填充
+        g.fillText("Total Equity", 20, 35);
+        //再次循环,余额数据显示为黑色粗线条
+        var bal = principal;
+        g.beginPath();
+        g.moveTo(paymentToX(0), amountToY(bal));
+        for (var p = 0; p < payments; p++) {
+            var thisMonthsInterest = bal * interest;
+            bal -= (monthly - thisMonthsInterest);
+            g.lineTo(paymentToX(p), amountToY(bal));
+        }
+        g.lineWidth = 3;//粗度加宽
+        g.stroke();//绘制余额曲线
+        g.fillStyle = "black";
+        g.fillText("Loan Balance", 20, 50)
+        //将年度数据在X轴做标记
+        g.textAlign = "center";
+        var y = amountToY(0);
+        for (var year = 1; year * 12 < payments; year++) {
+            var x = paymentToX(year * 12);//标记位置
+            g.fillRect(x - 0.5, y - 3, 1, 3);
+            if (year == 1) g.fillText("Year", x, y - 5);
+            if (year % 5 == 0 && year * 12 != payments) {//每5年数据
+                g.fillText(String(year), x, y - 5);
+            }
+            //赔付数据标记在右侧
+            g.textAlign = "right";
+            g.textBaseline = "middle";
+            var ticks = [monthly * payments, principal];//俩个点
+            var rightEdge = paymentToX(payments);//x坐标
+            for (var i = 0; i < ticks.length; i++) {
+                var y = amountToY(ticks[i]);
+                g.fillRect(rightEdge - 3, y - 0.5, 3, 1);
+                g.fillText(String(ticks[i].toFixed(0)), rightEdge - 5, y);
+            }
+        }
     }
 </script>
 </body>
