hey, tao brother is here！

--- a/vue_learning/componentization/counter.html
+++ b/vue_learning/componentization/counter.html
@@ -13,7 +13,7 @@
 				<!--需要在模板里先加入slot标签才能显示此处的Html-->
 			</button-counter>
 			<button-counter title="title2: "></button-counter>
-			<test></test>
+			<test/>
 		</div>
 		<script type="text/javascript">
 			Vue.component('button-counter', { //全局注册组件
