--- a/vue_learning/test.html
+++ b/vue_learning/test.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-<div id="test">
-    <table>
+<div id="test" >
+    <table style="margin: auto;" border="1">
         <th colspan="4" style="text-align:center">调查问卷</th>
         <tr>
             <td colspan="4">1.能提几桶水?</td>
