--- a/vue_learning/test.html
+++ b/vue_learning/test.html
@@ -9,6 +9,7 @@
 
 <body>
 <div id="test"  >
+    <h1>aaa</h1>
     <table style="margin: auto;" border="1">
         <th colspan="4" style="text-align:center">调查问卷</th>
         <tr>
